--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"xeris-play","version":"2.0.0","description":"On-chain casino on the Xeris blockchain","private":true,"scripts":{"dev":"npx serve public -p 3000","deploy":"vercel --prod"},"license":"MIT","engines":{"node":">=18"}}
+{"name":"xeris-play","version":"2.2.0","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"express":"^4.22.1"},"engines":{"node":">=18"}}
